<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.joget</groupId>
    <artifactId>wflow-wfengine</artifactId>
    <packaging>jar</packaging>
    <version>9.0-SNAPSHOT</version>
    <name>wflow-wfengine</name>
    <url>http://www.joget.org</url>
    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.0.2</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.4.3</version>
                <configuration>
                    <!--<skipTests>false</skipTests>-->
                </configuration>
            </plugin>
        </plugins>
        <extensions>
            <extension>
                <groupId>org.apache.maven.wagon</groupId>
                <artifactId>wagon-webdav</artifactId>
                <version>1.0-beta-2</version>
            </extension>
        </extensions>
    </build>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <version>5.3.37</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>xerces</groupId>
            <artifactId>xercesImpl</artifactId>
            <version>2.12.2</version>
        </dependency>
        <dependency>
            <groupId>xml-apis</groupId>
            <artifactId>xml-apis</artifactId>
            <version>1.4.01</version>
        </dependency>
        <dependency>
            <groupId>EnhydraShark</groupId>
            <artifactId>shark-maven</artifactId>
            <version>2.0.1</version>
            <exclusions>
                <exclusion>
                    <artifactId>xerces</artifactId>
                    <groupId>xercesImpl</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>xerces</artifactId>
                    <groupId>xmlParserAPIs</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>xml-apis</artifactId>
                    <groupId>xml-apis</groupId>
                </exclusion>
                <exclusion>
                    <groupId>log4j</groupId>
                    <artifactId>log4j</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>EnhydraShark</groupId>
            <artifactId>sharkscripting-standard</artifactId>
            <version>2.0.1</version>
        </dependency>
        <dependency>
            <groupId>EnhydraShark</groupId>
            <artifactId>sharkclientutilities-misc</artifactId>
            <version>2.0.1</version>
        </dependency>
        <dependency>
            <groupId>EnhydraShark</groupId>
            <artifactId>sharkinstancepersistence-dods</artifactId>
            <version>2.0.1</version>
        </dependency>
        <dependency>
            <groupId>EnhydraShark</groupId>
            <artifactId>sharkinstancepersistence-dodslayer</artifactId>
            <version>2.0.1</version>
        </dependency>
        <dependency>
            <groupId>EnhydraShark</groupId>
            <artifactId>sharkrepositorypersistence-dods</artifactId>
            <version>2.0.1</version>
        </dependency>
        <dependency>
            <groupId>EnhydraShark</groupId>
            <artifactId>sharkrepositorypersistence-dodslayer</artifactId>
            <version>2.0.1</version>
        </dependency>
        <dependency>
            <groupId>EnhydraShark</groupId>
            <artifactId>sharklogging-standard</artifactId>
            <version>2.0.1</version>
        </dependency>
        <dependency>
            <groupId>TogetherRelationalObjects</groupId>
            <artifactId>dbmanager</artifactId>
            <version>7.1-1-professional</version>
        </dependency>
        <dependency>
            <groupId>TogetherApplicationFramework</groupId>
            <artifactId>eaf-api</artifactId>
            <version>7.1-1-community</version>
        </dependency>
        <dependency>
            <groupId>TogetherApplicationFramework</groupId>
            <artifactId>eafconfreader</artifactId>
            <version>7.1-1-community</version>
        </dependency>
        <dependency>
            <groupId>org.apache-extras.beanshell</groupId>
            <artifactId>bsh</artifactId>
            <version>2.0b6</version>
        </dependency>
        <dependency>
            <groupId>org.joget</groupId>
            <artifactId>wflow-commons</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>org.joget</groupId>
            <artifactId>wflow-directory</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>org.joget</groupId>
            <artifactId>wflow-plugin-base</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>net.sf.opencsv</groupId>
            <artifactId>opencsv</artifactId>
            <version>1.8</version>
        </dependency>
        <dependency>
            <groupId>com.carrotsearch.thirdparty</groupId>
            <artifactId>simple-xml-safe</artifactId>
            <version>2.7.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.5.13</version>
            <exclusions>
                <exclusion>
                    <groupId>commons-codec</groupId>
                    <artifactId>commons-codec</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>1.15</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpmime</artifactId>
            <version>4.5.1</version>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>3.0.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>javax.annotation</groupId>
            <artifactId>javax.annotation-api</artifactId>
            <version>1.3.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.15.0</version>
        </dependency>
    </dependencies>
    <distributionManagement>
        <repository>
            <id>internal</id>
            <url>https://dev.joget.org/archiva/repository/internal</url>
        </repository>
        <snapshotRepository>
            <id>snapshots</id>
            <url>https://dev.joget.org/archiva/repository/snapshots</url>
        </snapshotRepository>
    </distributionManagement>
</project>
